--- a/app/src/main/res/layout/activity_on_off.xml
+++ b/app/src/main/res/layout/activity_on_off.xml
@@ -8,19 +8,29 @@
 
     <Button
         android:id="@+id/add_switch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="98dp"
         android:text="Button"
-        tools:layout_editor_absoluteX="280dp"
-        tools:layout_editor_absoluteY="447dp" />
+        app:layout_constraintLeft_toRightOf="@+id/switch_layout"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="397dp" />
 
+    <Button
+        android:id="@+id/new_button"
+        android:layout_width="50dp"
+        android:layout_height="20dp"
+        android:text="New Button"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="38dp" />
 
     <LinearLayout
         android:id="@+id/switch_layout"
-        android:layout_width="264dp"
+        android:layout_width="250dp"
         android:layout_height="495dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"></LinearLayout>
-
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        android:visibility="visible"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="16dp"></LinearLayout>
 </android.support.constraint.ConstraintLayout>
