--- a/app/src/main/res/layout/activity_on_off.xml
+++ b/app/src/main/res/layout/activity_on_off.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.example.igor.cortachoqueapp.OnOff">
 
+    <ImageView
+        android:id="@+id/splashscreen"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center"
+        android:src="@drawable/splash" />
+
     <Button
         android:id="@+id/add_switch"
         android:layout_width="0dp"
@@ -16,14 +23,6 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="397dp" />
 
-    <Button
-        android:id="@+id/new_button"
-        android:layout_width="50dp"
-        android:layout_height="20dp"
-        android:text="New Button"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="38dp" />
-
     <LinearLayout
         android:id="@+id/switch_layout"
         android:layout_width="250dp"
@@ -32,5 +31,8 @@
         android:orientation="vertical"
         android:visibility="visible"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp"></LinearLayout>
+        tools:layout_editor_absoluteX="16dp">
+
+        </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
