--- a/app/src/main/res/layout/add_switch_layout.xml
+++ b/app/src/main/res/layout/add_switch_layout.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
-        android:text="@string/nome_da_tomada"
+        android:text="@string/adicionar_tomada"
         android:textSize="25sp"
         android:textStyle="bold" />
 
@@ -20,7 +20,7 @@
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="@string/nome"
-        android:inputType="textEmailAddress" />
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/etEndereco"
@@ -29,7 +29,7 @@
         android:layout_marginTop="5dp"
         android:ems="10"
         android:hint="@string/endereco_da_tomada"
-        android:inputType="textPassword" />
+        android:inputType="text" />
 
     <Button
         android:id="@+id/btnCriarTomada"
