--- a/app/src/main/res/layout/activity_on_off.xml
+++ b/app/src/main/res/layout/activity_on_off.xml
@@ -8,31 +8,44 @@
 
     <ImageView
         android:id="@+id/splashscreen"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center"
-        android:src="@drawable/splash" />
-
-    <Button
-        android:id="@+id/add_switch"
         android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:src="@drawable/splash"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <LinearLayout
+        android:id="@+id/add_button_layout"
+        android:layout_width="98dp"
         android:layout_height="98dp"
-        android:text="Button"
-        app:layout_constraintLeft_toRightOf="@+id/switch_layout"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="397dp" />
+        android:layout_gravity="bottom|right"
+        android:orientation="vertical"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp">
+
+        <Button
+            android:id="@+id/add_switch"
+            android:layout_width="98dp"
+            android:layout_height="98dp"
+            android:layout_gravity="right"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:text="Button" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/switch_layout"
-        android:layout_width="250dp"
-        android:layout_height="495dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="2dp"
         android:orientation="vertical"
         android:visibility="visible"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp">
+        tools:layout_editor_absoluteX="0dp">
 
-        </LinearLayout>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
