--- a/app/src/main/res/layout/add_switch_layout.xml
+++ b/app/src/main/res/layout/add_switch_layout.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/gray">
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -11,6 +13,7 @@
         android:layout_marginTop="5dp"
         android:text="@string/adicionar_tomada"
         android:textSize="25sp"
+
         android:textStyle="bold" />
 
     <EditText
@@ -18,6 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@color/white"
         android:ems="10"
         android:hint="@string/nome"
         android:inputType="text" />
@@ -27,6 +33,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@color/white"
         android:ems="10"
         android:hint="@string/endereco_da_tomada"
         android:inputType="text" />
