--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#AF1F24</color>
     <color name="colorAccent">#AF1F24</color>
     <color name="backgroundColor">#E2E2E2</color>
+    <color name="gray">#A2A2A2</color>
+    <color name="white">#FFFFFF</color>
 </resources>
